load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazelcompat",
    srcs = ["bazelcompat.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/testutils/bazelcompat",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/build/bazel",
        "//pkg/testutils",
        "@org_golang_x_tools//go/analysis/analysistest",
    ],
)
