load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stagebazelgotoolchain",
    srcs = ["stagebazelgotoolchain.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/testutils/stagebazelgotoolchain",
    visibility = ["//visibility:public"],
    deps = ["//pkg/build/bazel"],
)
